My Django Girls app, first commit

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -15,7 +15,7 @@
 }
 
 h1, h2, h3, h4, .page-header {
-    font-family: 'Bangers', cursive;
+    font-family: 'Bangers', 'Black Han Sans', cursive, sans-serif;
 }
 
 .date {
