--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,10 +2,10 @@
 
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Kwangmin Yoo</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bangers|Black+Han+Sans" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
@@ -23,7 +23,7 @@
             {% else %}
                 <a href="{% url 'login' %}?next={{ request.path }}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Kwangmin Yoo</a></h1>
         </div>
         <div class="content container">
             <div class="row">
