--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Kwangmin Yoo</title>
+        <title>Kwangmin Yoo's Blog with Django</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css?family=Bangers|Black+Han+Sans" rel="stylesheet">
