--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -18,6 +18,10 @@ h1, h2, h3, h4, .page-header {
     font-family: 'Bangers', 'Black Han Sans', cursive, sans-serif;
 }
 
+.content_title {
+    font-size: 100pt;
+}
+
 .date {
     color: #828282;
 }
