--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load staticfiles %}
 
 {% block content %}
     {% for post in posts %}
@@ -6,9 +7,12 @@
             <div class="date">
                 {{ post.published_date }}
             </div>
-        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <div class="content_title">
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">
+                {{ post.title }}
+            </a></h1>
+            </div>
             <p>{{ post.text|linebreaksbr }}</p>
-
             <a href="{% url 'post_detail' pk=post.pk %}">
                 Comments : {{ post.approved_comments.count }}
             </a>
