--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -18,7 +18,7 @@
             </tr>
         </table>
 
-        <input type="submit" value="login" />
+        <input type="submit" value="로그인" />
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
 {% endblock %}
