--- a/blog/templates/registration/signup.html
+++ b/blog/templates/registration/signup.html
@@ -1,9 +1,10 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <form method="POST">
+    <form method="POST" novalidate>
         {% csrf_token %}
-        {{ form }}
-        <input type="submit">
+        {{ form|crispy }}
+        <input type="submit" value="회원가입">
     </form>
 {% endblock %}
