--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -52,3 +52,7 @@ h1, h2, h3, h4, .page-header {
 .comment {
     margin : 20px 20px 20px 20px;
 }
+
+.table_data {
+    margin : 20px 20px 20px 20px;
+}
